[tool.poetry]
name = "pycounts_hm"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["He Ma"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.4.3"
numpy = ">=1.21.5,<1.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
